--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "/client/sidebar.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve",
-    "build": "webpack"
+    "start": "nodemon server/server.js",
+    "build": "webpack",
+    "dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
