--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "mongoose": "^5.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
