--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/client/sidebar.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "start": "nodemon server/server.js",
+    "start": "nodemon server/start.js",
     "build": "webpack",
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js"
@@ -44,6 +44,7 @@
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
