--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
