--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "luxon": "^1.27.0",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
