--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
-    "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-54-219-249-204.us-west-1.compute.amazonaws.com"
+    "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^7.0.2",
     "enzyme": "^3.11.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -51,6 +52,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "luxon": "^1.27.0",
     "mongoose": "^5.12.7",
     "nginx": "^1.0.3",
