--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3004
-HOST=localhost
+PUBLIC_HOST=localhost
+PRIVATE_HOST=localhost
 COURSE_CONTENT_URL=ec2-18-130-234-175.eu-west-2.compute.amazonaws.com:9800
