--- a/.env-sample
+++ b/.env-sample
@@ -2,4 +2,10 @@ NODE_ENV=development
 PORT=3004
 PUBLIC_HOST=localhost
 PRIVATE_HOST=localhost
+(or:
+PUBLIC_HOST=13.57.183.76
+PRIVATE_HOST=172.31.8.82
+)
 COURSE_CONTENT_URL=ec2-18-130-234-175.eu-west-2.compute.amazonaws.com:9800
+ASSET_URL=http://localhost:3004/assets
+(or ASSET_URL=https://charlotte-badger-sidebar.s3-us-west-1.amazonaws.com)
