--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
     "nginx": "^1.0.3",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "shrink-ray-current": "^4.1.3"
+  },
+  "optionalDependencies": {
+    "iltorb": "~2.0.0",
+    "node-zopfli-es": "~1.0.3"
   }
 }
