--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "brotli-webpack-plugin": "^1.1.0",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "enzyme": "^3.11.0",
@@ -60,9 +61,5 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "shrink-ray-current": "^4.1.3"
-  },
-  "optionalDependencies": {
-    "iltorb": "~2.0.0",
-    "node-zopfli-es": "~1.0.3"
   }
 }
