--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "enzyme": "^3.11.0",
