--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "luxon": "^1.27.0",
     "mongoose": "^5.12.7",
     "nginx": "^1.0.3",
