--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pexels": "^1.2.1",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sequelize": "^6.6.4",
     "shrink-ray-current": "^4.1.3"
   }
 }
