--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack",
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
-    "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com"
+    "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
+    "sql-data-gen": "node database/populateSQL.js"
   },
   "repository": {
     "type": "git",
