AWS seeding of videoImages

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ public/
 # AWS token
 aws.js
 cb-sidebar-aws-key.pem
+aws.config.js
 
 # Environment variables
 .env
+
+# Photos and Videos for seeding
+photos/
+videos/
