--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "nginx": "^1.0.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "pexels": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "shrink-ray-current": "^4.1.3"
