--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
-    "sql-data-gen": "node database/populateSQL.js"
+    "sdc-sql-pop": "node database/populateSQL.js"
   },
   "repository": {
     "type": "git",
