Moved files around

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,11 @@ videos/
 # Pexels API key
 pexels.config.js
 
-# seeding file folders.
+# seeding file locations
 photos/
 videos/
 *.csv
+videoURLs.txt
+
+# Any config files that may have keys
+*.config.js
