--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
-    "sdc-sql-pop": "node --max-old-space-size=6196 database/populateSQL.js"
+    "sdc-sql-pop": "node --max-old-space-size=6196 database/populateSQL.js",
+    "sdc-data-gen": "node --max-old-space-size=6196 database/data_gen/dataGeneration.js"
   },
   "repository": {
     "type": "git",
