--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "aws-sdk": "^2.939.0",
     "cors": "^2.8.5",
+    "couchbase": "^3.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "luxon": "^1.27.0",
