--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
     "sdc-sql-pop": "node database/populateSQL.js",
     "sdc-cb-pop": "node database/populateCB.js",
-    "sdc-data-gen": "node --max-old-space-size=6196 database/data_gen/dataGeneration.js"
+    "sdc-data-gen": "node --max-old-space-size=6196 database/data_gen/dataGeneration.js",
+    "k6-get": "k6 run loadTest/getScript.js",
+    "k6-post": "k6 run loadTest/postScript.js"
   },
   "repository": {
     "type": "git",
@@ -58,6 +60,7 @@
     "express": "^4.17.1",
     "luxon": "^1.27.0",
     "mongoose": "^5.12.7",
+    "newrelic": "^8.0.0",
     "nginx": "^1.0.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
