--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
-    "sdc-sql-pop": "node database/populateSQL.js",
-    "sdc-cb-pop": "node database/populateCB.js",
-    "sdc-data-gen": "node --max-old-space-size=6196 database/data_gen/dataGeneration.js",
+    "sdc-sql-pop": "node database/data_gen/populateSQL.js",
+    "sdc-cb-pop": "node database/data_gen/populateCB.js",
+    "sdc-data-gen": "node database/data_gen/dataGeneration.js",
     "k6-get": "k6 run loadTest/getScript.js",
     "k6-post": "k6 run loadTest/postScript.js"
   },
