--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sequelize": "^6.6.4",
-    "shrink-ray-current": "^4.1.3"
+    "shrink-ray-current": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
