--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
     "sdc-sql-pop": "node database/data_gen/populateSQL.js",
-    "sdc-cb-pop": "node database/data_gen/populateCB.js",
     "sdc-data-gen": "node database/data_gen/dataGeneration.js",
+    "sdc-price-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").price()'",
+    "sdc-video-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").video()'",
+    "sdc-sale-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").sale()'",
+    "sdc-sidebar-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").sidebar()'",
+    "sdc-junction-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").junction()'",
     "k6-get": "k6 run loadTest/getScript.js",
     "k6-post": "k6 run loadTest/postScript.js"
   },
@@ -55,7 +59,6 @@
   "dependencies": {
     "aws-sdk": "^2.939.0",
     "cors": "^2.8.5",
-    "couchbase": "^3.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "luxon": "^1.27.0",
