--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
     "sdc-sql-pop": "node database/data_gen/populateSQL.js",
     "sdc-data-gen": "node database/data_gen/dataGeneration.js",
-    "sdc-price-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").price()'",
-    "sdc-video-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").video()'",
-    "sdc-sale-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").sale()'",
+    "sdc-priceSaleJunction-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").priceSaleJunction(10000000, 2500000)'",
+    "sdc-video-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").video(10000000)'",
     "sdc-sidebar-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").sidebar()'",
-    "sdc-junction-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").junction()'",
     "k6-get": "k6 run loadTest/getScript.js",
     "k6-post": "k6 run loadTest/postScript.js"
   },
