--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sidebar",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Sidebar for Udemy clone website",
   "scripts": {
     "test": "jest --detectOpenHandles",
     "sdc-tests": "jest --detectOpenHandles --forceExit -- test/sdc-api.spec.js",
-    "start": "nodemon server/start.js",
-    "build": "webpack",
+    "start": "node server/start.js",
+    "build": "webpack --mode=production",
     "dev": "webpack --watch",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
