Playing with deployment settings

--- a/.env-sample
+++ b/.env-sample
@@ -11,3 +11,10 @@ PRIVATE_HOST=172.31.8.82
 ASSET_URL=http://localhost:3004/assets
 or
 ASSET_URL=https://charlotte-badger-sidebar.s3-us-west-1.amazonaws.com
+
+NODE_ENV=production
+COURSE_CONTENT_URL=ec2-18-130-234-175.eu-west-2.compute.amazonaws.com:9800
+PORT=3004
+
+PUBLIC_HOST=34.212.83.37
+PRIVATE_HOST=172.31.27.60
