--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "start": "node server/start.js",
     "start-dev": "nodemon server/start.js",
     "build": "webpack --mode=production",
-    "dev": "webpack --watch",
+    "dev": "webpack --mode=development",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
     "sdc-sql-pop": "node database/data_gen/populateSQL.js",
     "sdc-data-gen": "node database/data_gen/dataGeneration.js",
-    "sdc-priceSaleJunction-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").priceSaleJunction(10000000, 2500000)'",
-    "sdc-video-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").video(10000000)'",
-    "sdc-sidebar-gen": "node -e 'require(\"./database/data_gen/dataGeneration.js\").sidebar()'",
     "k6-get": "k6 run loadTest/getScript.js",
     "k6-post": "k6 run loadTest/postScript.js"
   },
