--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server/start.js",
     "start-dev": "nodemon server/start.js",
     "build": "webpack --mode=production",
+    "launch": "webpack --mode=production && node build-prod/awsBundleSeeding.js",
     "dev": "webpack --mode=development",
     "pop": "node database/populateDatabase.js",
     "ec2": "ssh -i cb-sidebar-aws-key.pem ubuntu@ec2-13-57-183-76.us-west-1.compute.amazonaws.com",
